--- a/package.json
+++ b/package.json
@@ -15,11 +15,22 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/vue-query": "^5.92.1",
+    "@vueuse/core": "^14.1.0",
     "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "embla-carousel-autoplay": "^8.6.0",
+    "lucide-vue-next": "^0.560.0",
     "pinia": "^3.0.4",
+    "reka-ui": "^2.6.1",
+    "swiper": "^12.0.3",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -30,6 +41,7 @@
     "eslint-plugin-vue": "~10.5.1",
     "globals": "^16.5.0",
     "prettier": "3.6.2",
+    "tw-animate-css": "^1.4.0",
     "vite": "^7.2.4",
     "vite-plugin-vue-devtools": "^8.0.5"
   },
