--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "lucide-vue-next": "^0.560.0",
     "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "reka-ui": "^2.6.1",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
